--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -63,7 +63,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
-      - "GrpcSettings:DiscountUrl=discount.grpc"
+      - "GrpcSettings:DiscountUrl=http://discount.grpc"
     depends_on:
       - basketdb
     ports:
@@ -87,5 +87,5 @@ services:
     depends_on:
       - discountdb
     ports:
-      - "8002:80"
+      - "8003:80"
 
