--- a/Services/Ordering/Ordering.Domain/Ordering.Domain.csproj
+++ b/Services/Ordering/Ordering.Domain/Ordering.Domain.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Common\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
 </Project>
