--- a/Services/Ordering/Ordering.Domain/Ordering.Domain.csproj
+++ b/Services/Ordering/Ordering.Domain/Ordering.Domain.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <None Remove="Common\" />
+    <None Remove="Entities\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 </Project>
