--- a/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -7,4 +7,16 @@
   <ItemGroup>
     <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Persistence\" />
+    <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
+    <None Remove="Repositories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Persistence\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+  </ItemGroup>
 </Project>
