--- a/Services/Ordering/Ordering.API/appsettings.json
+++ b/Services/Ordering/Ordering.API/appsettings.json
@@ -1,11 +1,18 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678"
+    },
+    "EmailSettings": {
+        "FromAddress": "test@firstmicroservicesapp.com",
+        "ApiKey": "",
+        "FromName":  "First Microservices App"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
-
