--- a/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -11,12 +11,16 @@
     <None Remove="Persistence\" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="Repositories\" />
+    <None Remove="Mail\" />
+    <None Remove="SendGrid" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Persistence\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Mail\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 </Project>
