--- a/Services/Ordering/Ordering.API/appsettings.json
+++ b/Services/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678"
+        "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;TrustServerCertificate=True"
     },
     "EmailSettings": {
         "FromAddress": "test@firstmicroservicesapp.com",
