--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -5,6 +5,9 @@
     "GrpcSettings": {
         "DiscountUrl": "http://localhost:5003"
     },
+    "EventBusSetting": {
+        "HostAddress": "amqp://guest:guest@localhost:5672"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
