--- a/Services/Basket/Basket.API/appsettings.Development.json
+++ b/Services/Basket/Basket.API/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
-    "CacheSettings": {
-        "ConnectionString": "basketdb:6379"
-    },
+    //"CacheSettings": {
+    //    "ConnectionString": "basketdb:6379"
+    //},
     "Logging": {
         "LogLevel": {
             "Default": "Information",
