--- a/Services/Ordering/Ordering.API/appsettings.json
+++ b/Services/Ordering/Ordering.API/appsettings.json
@@ -5,7 +5,10 @@
     "EmailSettings": {
         "FromAddress": "test@firstmicroservicesapp.com",
         "ApiKey": "",
-        "FromName":  "First Microservices App"
+        "FromName": "First Microservices App"
+    },
+    "EventBusSetting": {
+        "HostAddress": "amqp://guest:guest@localhost:5672"
     },
     "Logging": {
         "LogLevel": {
