--- a/ApiGateways/Shopping.Aggregator/appsettings.json
+++ b/ApiGateways/Shopping.Aggregator/appsettings.json
@@ -1,7 +1,9 @@
-{
+﻿{
     "ApiSettings": {
-        "GatewayAddress": "http://localhost:8010"
-    }
+        "CatalogUrl": "http://localhost:8000",
+        "BasketUrl": "http://localhost:8001",
+        "OrderingUrl": "http://localhost:8004"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
