--- a/Web/AspnetRunBasics/AspnetRunBasics.csproj
+++ b/Web/AspnetRunBasics/AspnetRunBasics.csproj
@@ -28,4 +28,12 @@
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Models\" />
+    <None Remove="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
