--- a/Web/AspnetRunBasics/AspnetRunBasics.csproj
+++ b/Web/AspnetRunBasics/AspnetRunBasics.csproj
@@ -31,9 +31,11 @@
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Services\" />
+    <None Remove="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Services\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
