host.docker.internal

--- a/Services/Catalog/Catalog.API/appsettings.json
+++ b/Services/Catalog/Catalog.API/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+    "IdentityServer": {
+        "HostAddress": "http://localhost:5020"
+    },
     "DatabaseSettings": {
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "ProductDb",
