--- a/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+    "IdentityServer": {
+        "HostAddress": "http://localhost:8020"
+    },
     "DatabaseSettings": {
         "ConnectionString": "mongodb://catalogdb:27017",
         "DatabaseName": "ProductDb",
