--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,11 +70,19 @@ services:
       context: .
       dockerfile: Web/AspnetRunBasics/Dockerfile
 
+  identityserver:
+    image: ${DOCKER_REGISTRY-}identityserver
+    build:
+      context: .
+      dockerfile: Services/Security/IdentityServer/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
+
 
 
 
